# airflow-1-get-started

./: .dockerignore  .gitignore  .gitlab-ci.yml  .python-version  README.md  airflow.apache.org_docs_apache-airflow_2.6.2_docker-compose.yaml  build.sh  config.py  dev_requirements.txt  docker-compose.yaml  dvc.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tutorial.md
.dvc/: config
airflow/: airflow.cfg
airflow/dags/: monitor_data.py  monitor_model.py  predict.py
config/: airflow.cfg  dags_config.py
dags/: assignment-6-airflow.py  assignment_6_airflow.py  config.py  daily_papers_parser.py  hello-airflow.py  monitor_data.py  monitor_model.py  monitor_prediction.py  predict.py  scoring.py  scoring_mlflow.py  train.py
dags/assignment_6_airflow/: load_data.py  split_dataset.py
dags/examples/: hello-airflow.py  tutorial_taskflow_api.py
dags/src/: __init__.py  classifiers.py  config.py  parsers.py  reports.py  storage.py
dags/utils/: tasks.py  utils.py
docker/airflow_base/: Dockerfile  requirements.txt
docker/mlflow/: Dockerfile
reports/: .gitignore
scripts/: test_arxiv_abstract.py  test_paper_parsing.py  test_report_saving.py
src/monitoring/: data_quality.py  model_performance.py  prediction_drift.py  utils.py
src/pipelines/: load_data.py  monitor_data.py  monitor_model.py  monitor_prediction.py  predict.py  predict_mlflow.py  prepare_reference_data.py  process_data.py  scoring_mlflow.py  train.py
src/scripts/: create_db.py  drop_db.py
src/scripts/airflow/: scheduler.sh  webserver.sh
src/utils/: db_utils.py  models.py  utils.py
